plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'junit:junit:4.13.1'
    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14
